# probe

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONFIG.md  Cargo.toml  ISSUE_BODY.md  LICENSE  README.md  SCORING_GUIDE.md  example-config.yaml  issue_payload.json  issue_response.json  new_file.txt  test_declaration_boost.rs
.github/workflows/: ci.yml  index-benchmark.yml  pr-check.yml  release.yml
scripts/: render_benchmark_report.py  run_index_benchmark.py
src/: code_chunker.rs  config.rs  file_scanner.rs  language_processor.rs  lib.rs  main.rs  metadata.rs  reranker.rs  search_engine.rs  search_index.rs  show_chunks.rs
src/languages/: c.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/languages/tests/: java_test.rs  mod.rs
test_files/: search_test.js
tests/: integration_tests.rs  test_java_interface_methods.rs  test_java_records.rs  test_search_query_processing.rs  test_stemming_and_config.rs  test_unsupported_languages.rs
tests/test_data/gitignore_test/: source.rs
tests/test_data/java_interface_test/: User.java  UserService.java
tests/test_data/java_records_test/: Order.java  Person.java
tests/test_data/sample_project/: .gitignore  README.md  archive_test.rs  config.json  lib.rs  main.rs
tests/test_data/sample_project/utils/: helper.rs
