[package]
name = "codesearch"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.22"
ignore = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
walkdir = "2.4"
atty = "0.2"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
