[package]
name = "probe"
version = "0.1.2"
edition = "2021"

[dependencies]
tantivy = "0.22"
ignore = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
anyhow = "1.0"
walkdir = "2.4"
atty = "0.2"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c-sharp = "0.20"
fastembed = "4.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
