[package]
name = "probe"
version = "0.1.2"
edition = "2021"

[dependencies]
tantivy = "0.22"
ignore = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
anyhow = "1.0"
walkdir = "2.4"
atty = "0.2"
tree-sitter = "0.20"
tree-sitter-java = "0.20"
fastembed = "4.0"
dirs = "6.0"
hf-hub = "0.4"
rayon = "1.7"

[dev-dependencies]
tempfile = "3.21"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"
indoc = "2.0"
